--- a/home.html
+++ b/home.html
@@ -7,6 +7,6 @@
     <title>Porfolio - Mynard</title>
 </head>
 <body>
-    <marquee> test </marquee>
+    <h1> Welcome to Mynard's Portfolio </h1>
 </body>
 </html>
